continuação links internos

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <h1>usando links externos</h1>
     <p>voce pode acessar meu <a target="_blank" rel="_external" href="https://github.com/juangarciamgt10"> repositorio publico no Github</a></p> <!--a tag A serva para direcionar para uma pagina indicada por um link externo, agora as duas novas tags TARGET E REL, uma é para ao clicar no link voce nao sobrepor a pagina, abrir em outra aba. e a tag EXTERNAL serve para falar que é um link externo (tag nova)-->
     <p>voce tambem pode acessar<a target="_blank" rel="" href="https://www.facebook.com/profile.php?id=100001157926020"> minha pagina no facebook</a></p>
+]
+     <!--links internos agora-->
+
+    <h1>usando links internos</h1>
+    <p>começando a usar</p> 
     
 </body>
 </html>
