continuação com links internos

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
      <!--links internos agora-->
 
     <h1>usando links internos</h1>
-    <p>começando a usar</p> 
+    <p>começando a usar um link interno a <a href="pag002.html">partir desse</a></p> 
+
     
 </body>
 </html>
